# workq

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  ISSUES.md  PLAN.md  README.md  docker-compose.observer.yml  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: ci.yml
docker/: Dockerfile  loki.yml  otel-collector.yml  tempo.yml
docker/grafana/: datasources.yml
docker/grafana/alerting/: alerts.yml
docs/: cli.md  db.md  engage.md  ledger.md  llm.md  ops.md  skills.md
docs/plans/: 2026-02-27-animus-rs-data-layer.md
docs/research/microclaw/: agent.md
docs/research/postgres/: backup.md  queues.md  rust.md  semantic.md
faculties/: .gitkeep  engineer.toml
fixtures/faculties/: transform.toml
fixtures/scripts/: consolidate.sh  engage.sh  orient.sh  recover.sh
migrations/: 20260227000001_extensions.sql  20260227000002_work_items.sql  20260227000003_memories.sql  20260227000004_unique_dedup_index.sql  20260301000001_faculty_skill_fields.sql
scripts/: backup.sh  restore.sh
scripts/engineer/: consolidate.sh  engage.sh  orient.sh  recover.sh
src/: engine.rs  error.rs  event.rs  lib.rs  model.rs  storage.rs
src/config/: mod.rs  secrets.rs
src/db/: mod.rs  pgmq.rs  work.rs
src/engine/: control.rs  focus.rs  mod.rs
src/faculty/: mod.rs
src/llm/: mod.rs
src/memory/: mod.rs  store.rs
src/model/: memory.rs  mod.rs  work.rs
src/telemetry/: genai.rs  metrics.rs  mod.rs  work.rs
tests/: config_test.rs  db_test.rs  engine_test.rs  faculty_test.rs  integration_test.rs  memory_test.rs  telemetry_smoke_test.rs  telemetry_test.rs
