[package]
name = "animus-rs"
version = "0.1.0"
edition = "2024"
description = "Animus v2 engine — Postgres-backed data layer for AI persistence"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[[bin]]
name = "animus"
path = "src/bin/animus.rs"
