[package]
name = "animus-rs"
version = "2.0.0"
edition = "2024"
description = "Substrate for relational beings — the machinery that lets an animus exist, persist, and become"
license = "MIT"

[dependencies]
# Config + Secrets
anyhow = "1"
dotenvy = "0.15"
secrecy = { version = "0.10", features = ["serde"] }

# Core
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

# LLM + Embeddings (Rig)
rig-core = "0.31"
rig-postgres = "0.1"

# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry-appender-tracing = "0.31"
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "animus"
path = "src/bin/animus.rs"
